dohpaZ (18/03/02)
------------------
Modifications:
 + Map optimizations.  Switched from using {QPixmap, QWidget}::drawPixmap() to 
   bitBlt() for copying pixmap data around and to screen.  Also, cache 
   the item->filterFlags() value on the stack for slightly faster access.
   The bitBlt optimization MAY help those seeing lockups.
 + Changed default spawn save frequency, and updated showeq.conf.dist to 
   reflect the new default (saves spawns every 60 seconds).
 + Optimized how spawn information was saved and added a magic number to the
   beginning of it's file
 + Added FOV Mode selection to the map, with three options: 
   Distance Based (default), Scaled Classic, and Classic.  This controls the
   style of player background/field of view display
   + "Distance Based" where its size is based on an actual distance 
     along a horizontal plane from the player.
   + "Scaled Classic" where its size is based on the classic formula 
     a simple scale applied to compensate for zoom.
   + "Classic" where the size uses the old, meaningless, non-scaled classic
     formula.

dohpaZ (17/03/02)
------------------
Modifications:
 + Made FOV distance configurable in map units (defaults to 200 units), and
   also made FOV color and fill pattern style be configurable
 + Added options to the map menu to allow the configuration of the 
   FOV parameters as well as the base spawn DrawSize
 + Cleaned up all the code that uses FOV, and pre-calculate the scale in 
   Map::reAdjust()
 + Minor map optimizations (pre-calculate common draw size derivatives)
 + Added more information to the Network Diagnostics dialog
 + Added the ability to configure the base filename of save/restore session
   data files.  This is useful for those running multiple instances of ShowEQ
   at once, in which case you don't wan't all your session snapshots using
   the same snapshot files...
 + Added "BaseFilename" key to the [SaveState] section of the configure file,