@@ -935,19 +935,19 @@ void EQPlayer::fillConTable()
 // 58-60			-17			+3
 
 // *NEW* <Malakin 2001-11-15>
-// Levels	Green		Cyan    Red
-// 1-12			-6       -4			  +3
-// 13-22			-7       -5			  +3
-// 23-24			-10?    -7?  	     +3
-// 25-34			-13     -10			  +3
-// 35-40			-14?   -10?		  +3
-// 41-42			-15?   -11?		  +3
-// 43-44			-16?   -12?		  +3
-// 45-48			-17?   -13?		  +3
-// 49-51			-18		 -14?     +3
-// 52-54       -19?   -15?    +3
-// 55-57			-20?	 -16?	  +3
-// 58-60       -21     -16     +3
+// Levels	Green	Cyan    Red
+// 1-12		-6       -4	+3
+// 13-22	-7       -5	+3
+// 23-24	-10?    -7?  	+3
+// 25-34	-13     -10	+3
+// 35-40	-14?	-10?	+3
+// 41-42	-15?	-11?	+3
+// 43-44	-16?	-12?	+3
+// 45-48	-17?	-13?	+3
+// 49-51	-18	-14?    +3
+// 52-54        -19?	-15?    +3
+// 55-57	-20?	-16?	+3
+// 58-60        -21     -16     +3
 
   for (uint8_t level = 1; level < maxSpawnLevel; level++)
   {	
@@ -989,7 +989,7 @@ void EQPlayer::fillConTable()
       }
       else if (m_playerLevel < 35)
       { // 25 - 34
-	greenRange = -13;
+	greenRange = -11;
 	cyanRange = -10;
       }
       else if (m_playerLevel < 41) 
